# EasySplash

./: CMakeLists.txt  Cargo.toml  LICENSE  Makefile  README.md  flake.nix  shell.nix
.github/workflows/: code_style.yml  easysplash.yml  linux.yml
data/glowing-logo/: animation.toml
data/ossystems-demo/: animation.toml
doc/: Animation-Structure.md
etc/: easysplash-quit.service.in  easysplash-start.init.in  easysplash-start.service.in  easysplash.default
src/: CMakeLists.txt  animation.cpp  animation.hpp  animation.rs  backend.hpp  config.h.in  display.hpp  easysplashctl.cpp  event_loop.cpp  event_loop.hpp  eventloop.cpp  eventloop.hpp  framebuffer.cpp  framebuffer.hpp  gstreamer.rs  linux_framebuffer.cpp  linux_framebuffer.hpp  load_png.cpp  load_png.hpp  log.cpp  log.hpp  lru_cache.hpp  main.cpp  main.rs  message.rs  noncopyable.hpp  scope_guard.hpp  splashctl.cpp  types.cpp  types.hpp  zip_archive.cpp  zip_archive.hpp
src/eglgles/: egl_platform.hpp  egl_platform_gbm.cpp  egl_platform_rpi_dispmanx.cpp  egl_platform_viv_fb.cpp  egl_platform_x11.cpp  gl_misc.cpp  gl_misc.hpp  gles_display.cpp  gles_display.hpp  opengl.hpp  texture.cpp  texture.hpp
src/g2d/: g2d_display.cpp  g2d_display.hpp
src/init/: CMakeLists.txt  easysplash-quit.service.cmake  easysplash-start.init.cmake  easysplash-start.service.cmake
src/swrender/: swrender_display.cpp  swrender_display.hpp
