#
# EasySplash - Linux Bootsplash
# Copyright (C) 2014, 2015  O.S. Systems Software LTDA.
#
# This file is part of EasySplash.
#
# Please refer to the LICENSE file included in the source code for
# licensing terms.
#

cmake_minimum_required(VERSION 2.8.9)
project(splash)

set(CMAKE_INCLUDE_CURRENT_DIR ON)

add_subdirectory(src)
