# EasySplash - tool for animated splash screens
# Copyright (C) 2014, 2015  O.S. Systems Software LTDA.
#
# This file is part of EasySplash.
#
# SPDX-License-Identifier: Apache-2.0 OR MIT

cmake_minimum_required(VERSION 2.8.9)
project(easysplash)

set(CMAKE_INCLUDE_CURRENT_DIR ON)

add_subdirectory(src)
