# EasySplash - tool for animated splash screens
# Copyright (C) 2020  O.S. Systems Software LTDA.
#
# SPDX-License-Identifier: Apache-2.0 OR MIT

[package]
name = "easysplash"
version = "1.90.0"
authors = ["Otavio Salvador <otavio@ossystems.com.br>"]
edition = "2018"

[dependencies]
anyhow = "1.0.42"
argh = "0.1.5"
async-std = { version = "1.9.0", features = ["attributes", "unstable"] }
derive_more = { version = "0.99.16", default-features = false, features = ["display", "from", "error"] }
gst = { version = "0.17.1", package = "gstreamer", default-features = false }
log = { version = "0.4.14", default-features = false }
serde = { version = "1.0.126", features = ["derive"] }
simple-logging = "2.0.2"
toml = "0.5.8"

# Optional dependencies
systemd = { version = "0.9.0", optional = true }

[features]
default = []

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
codegen-units = 1
panic = 'abort'
